[RLS] Adjust the interest rect by scroll offset for non-root anchors.

This patch updates the position on screen of non-root anchored layers
for interest rect calculation. This is needed, because the paint clip
always uses (0, 0) positioned viewport, so for content that is larger
than 4k pixels in height that is scrolled, we clip out the tail of
the content because we're not accounting for the scroll.

R=wangxianzhu@chromium.org, szager@chromium.org

Bug: 813835
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I3dabcd4fdb907c949593bed7a076e88cdabed53a
Reviewed-on: https://chromium-review.googlesource.com/933731
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Commit-Queue: vmpstr <vmpstr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539241}
Former-commit-id: 276d2aa768f8ef1082a4a543dfbe509d9a819f71